--- a/html_build/packages/game-schedules/templates/schedule-list.html
+++ b/html_build/packages/game-schedules/templates/schedule-list.html
@@ -7,7 +7,7 @@
 
 		{{^eventPage}}
 			<span class="event-sport-label">&nbsp;</span>
-			<a href="javascript: void(0);" title="Add a Game" class="add-game-h desktop-link right-with-icon">Add Game.</a>
+			<a href="javascript: void(0);" title="Add a Game" class="add-game-h desktop-link right-with-icon">ADD GAME</a>
 		{{/eventPage}}
 	</div>
 <div class="select-team">
@@ -19,12 +19,12 @@
 </div>
 {{#eventPage}}
 
-	<a href="javascript: void(0);" title="Add an Event / Meet" class="add-event-h mobile-link right-with-icon">Add Event / Meet</a>
+	<a href="javascript: void(0);" title="Add an Event / Meet" class="add-event-h common-btn common-default-game-orange mobile-link right-with-icon">Add Event / Meet</a>
 {{/eventPage}}
 
 {{^eventPage}}
-		<a href="javascript: void(0);" title="show older" class="show-older mobile-link show-older-h"></a>
-		<a href="javascript: void(0);" title="add game" class="add-game-h mobile-link right-with-icon">Add Game.</a>
+		<a href="javascript: void(0);" title="show older" class="show-older  mobile-link show-older-h">SHOW OLDER</a>
+		<a href="javascript: void(0);" title="add game" class="add-game-h mobile-link right-with-icon">ADD GAME</a>
 {{/eventPage}}
 
 
@@ -39,8 +39,8 @@
 	{{/eventPage}}
 	{{^eventPage}}
 	<div>
-		<a href="javascript: void(0);" title="show older" class="show-older mobile-link show-older-h"></a>
-		<a href="javascript: void(0);" title="add game" class="add-game-h desktop-link right-with-icon">Add Game.</a>
+		<a href="javascript: void(0);" title="show older" class="show-older mobile-link show-older-h">SHOW OLDER</a>
+		<a href="javascript: void(0);" title="add game" class="add-game-h desktop-link right-with-icon">ADD GAME</a>
 	</div>
 	{{/eventPage}}
 </div>
