--- a/html_build/packages/common/templates/heading.html
+++ b/html_build/packages/common/templates/heading.html
@@ -1,2 +1,2 @@
-<div class="green-left-heading">{{heading}}</div>
+<div class="green-left-heading"><span>{{heading}}</span></div>
 <div class="buttons-h pull-left"></div>
