--- a/html_build/packages/game-schedules/templates/schedule-item.html
+++ b/html_build/packages/game-schedules/templates/schedule-item.html
@@ -3,7 +3,7 @@
 	{{#teams}}
 		<div class="org-name">
 			<a href="/#!team/{{team_id}}"><span class="team-label">{{org_name}} | {{complevel}} | {{season}} {{year}}</span></a>
-			<a href="javascript: void(0);" data-team-id="{{team_id}}" data-sport-id="0" title="add game" class="add-game-h desktop-link right-with-icon">Add Game</a>
+			<a href="javascript: void(0);" data-team-id="{{team_id}}" data-sport-id="0" title="add game" class="add-game-h desktop-link right-with-icon">ADD GAME</a>
 			<!--<a href="javascript: void(0);" data-sport-id="0" title="add team" class="add-event-h">Click here to Add Event.</a>-->
 		</div>
 			<div class="game-box-outer">
@@ -22,7 +22,7 @@
 			</ul>
 		</div>
 		
-		<a href="javascript: void(0);" title="show older" class="common-btn common-default-comment-dark-grey mobile-link show-older-h">Show Older</a>
+		<a href="javascript: void(0);" title="show older" class="common-btn common-default-comment-dark-grey mobile-link show-older-h">SHOW OLDER</a>
 		<a href="javascript: void(0);" data-team-id="{{team_id}}" data-sport-id="0" title="add game" class="add-game-h common-btn common-default-game-orange mobile-link right-with-icon">ADD GAME</a>
 		
 	{{/teams}}
