--- a/html_build/pages/profile/templates/header.html
+++ b/html_build/pages/profile/templates/header.html
@@ -2,7 +2,7 @@
 <div class="row-fluid">
 	<div class="profile-heading" itemscope itemtype="http://schema.org/Person">
 		<div class="sports-h"></div>
-		<h3 class="username" itemprop="name">{{name}}</h3><h3> {{#grad_year}}'{{grad_year}}{{/grad_year}}</h3>
+		<h3 class="username" itemprop="name">{{name}}</h3><h3 class="grad-year"> {{#grad_year}}'{{grad_year}}{{/grad_year}}</h3>
 		<h4 class="sports-name-h"></h4>
 	</div>
 
