increase header height for team page

--- a/html/css/app.css
+++ b/html/css/app.css
@@ -2457,9 +2457,13 @@ li.sport .teamlist-header, .stat-val-outer {
 	.profile-pic-outer {
 		margin: 0;
 	}
-
+	
 	.profile-heading {
 		position: relative;
+		min-height: 135px;
+	}
+
+	.profile-header .profile-heading {
 		min-height: 115px;
 	}
 
