--- a/html/css/bootstrap.css
+++ b/html/css/bootstrap.css
@@ -5222,7 +5222,7 @@ input[type="submit"].btn.btn-mini {
 }
 
 .modal-header {
-  padding: 9px 15px;
+  /*padding: 9px 15px;*/
 }
 
 .modal-header .close {
