--- a/html/pages/profilesetting/templates/club.html
+++ b/html/pages/profilesetting/templates/club.html
@@ -1,5 +1,5 @@
 <div class="row-fluid">
-	<span class="green-left-heading">Club Teams and Affiliations</span>
+	<span class="green-left-heading"><span>Club Teams and Affiliations</span></span>
 </div>
 <div id="btn-Add-club" class="div-add-dotted">
 	+ Add a Club
