--- a/html/css/app.css
+++ b/html/css/app.css
@@ -2349,12 +2349,15 @@ li.sport .teamlist-header, .stat-val-outer {
 	height: 300px;
 }
 
+#user_profile_data {
+	float: left;
+	width: 40%;
+	margin-left: 50px;
+}
+
 /* Dotted area css ends  */
 
 /*  Mobile css    */
-
-@media only screen and (max-width: 480px) {
-}
 
 @media only screen and (min-width: 320px) and (max-width: 767px) {
 
@@ -3518,7 +3521,7 @@ li.sport .teamlist-header, .stat-val-outer {
 		margin-left: 5%;
 		margin-bottom: 10px;
 		float: left;
-	}	
+	}
 	
 	#user_profile_data input[type="password"] {
 		background-color: #EAEAEA;
@@ -3532,6 +3535,31 @@ li.sport .teamlist-header, .stat-val-outer {
 		-webkit-border-radius: 3px;
 		-moz-border-radius: 3px;
 		border-radius: 3px;
+	}
+	
+	/* Team page */
+	
+	.div-sports-wrapper {
+		padding-bottom: 20px;
+	}
+	
+	.btn-Finish-Sports {
+		margin-right: 5px;	
+	}
+	
+	.div-sports-level input[type="checkbox"] {
+		width: 20px;
+		height: 20px;
+	}
+	
+	.org-sport-list-header input[type="checkbox"] {
+		margin: 5px 0px 5px 20px;
+		width: 20px;
+		height: 20px;
+	}
+	
+	.alert-success, .alert-error {
+		display: block;
 	}
 	
 	
