--- a/html/pages/profile/templates/layout.html
+++ b/html/pages/profile/templates/layout.html
@@ -1,4 +1,4 @@
-<div class="template-container">
+<div class="template-container profile-container">
 	<div id="main-header" class="profile-header"></div>
 	<div class="green-left-heading">MESSAGE BOARD</div>
 	<div id="commenton-wrap" class="clearfix clear profile-comment-list-box"></div>
