--- a/html/packages/common/templates/add-participants-buttons.html
+++ b/html/packages/common/templates/add-participants-buttons.html
@@ -1,9 +1,9 @@
-<a href="javascript: void(0);" data-tip-style="qtip-athletez qtip-orange" data-content="Add me to the list for &quot;{{data.message.event_name}}&quot;" class="add-participants desktop-link add-to-participants add-to-participants-list-h"></a>
+<a href="javascript: void(0);" data-tip-style="qtip-athletez qtip-orange" data-content="Add me to the list for &quot;{{data.message.event_name}}&quot;" class="add-participants add-icon desktop-link add-to-participants-list-h"></a>
 <a href="javascript: void(0);" data-tip-style="qtip-athletez qtip-fb-c" data-content="Invite a friend from facebook to participate in &quot;{{data.message.event_name}}&quot;" class="invite-from-fb desktop-link add-icon invite-participant-from-fb-h"></a>
 
 
 
-<a href="javascript: void(0);" data-tip-style="qtip-athletez qtip-orange" data-content="Add me to the list for &quot;{{data.message.event_name}}&quot;" class="add-participants common-btn common-default-game-orange mobile-link add-to-participants add-to-participants-list-h">ADD</a>
+<a href="javascript: void(0);" data-tip-style="qtip-athletez qtip-orange" data-content="Add me to the list for &quot;{{data.message.event_name}}&quot;" class="add-participants common-btn common-default-game-orange mobile-link add-to-participants add-to-participants-list-h">ADD ME</a>
 <a href="javascript: void(0);" data-tip-style="qtip-athletez qtip-fb-c" data-content="Invite a friend from facebook to participate in &quot;{{data.message.event_name}}&quot;" class="invite-from-fb common-btn common-default-comment-blue mobile-link add-icon invite-participant-from-fb-h">INVITE</a>
 
 
