--- a/html/css/app.css
+++ b/html/css/app.css
@@ -2355,6 +2355,14 @@ li.sport .teamlist-header, .stat-val-outer {
 
 @media only screen and (min-width: 320px) and (max-width: 767px) {
 
+
+#menu-frame .display-main, #menu-frame .sub {
+		position: static !important;
+		height: auto !important;
+		width: 100% !important;
+		float: left !important;
+	}
+
 	body {
 		margin: 0 !important;
 		padding: 0 !important;
