--- a/html/css/app.css
+++ b/html/css/app.css
@@ -3613,6 +3613,15 @@ li.sport .teamlist-header, .stat-val-outer {
 	#main-header .image-outer-h li.image div.game-tile {
 		left: 35% !important;
 	}
+}
+
+
+@media only screen and (min-width: 480px) and (max-width: 767px) {
+	.closer {
+		margin-top: 5px !important;
+	}
 	
-	 
+	.loading_image {
+		top: 35px !important;
+	}
 }
