--- a/html/css/app.css
+++ b/html/css/app.css
@@ -3613,6 +3613,11 @@ li.sport .teamlist-header, .stat-val-outer {
 	#main-header .image-outer-h li.image div.game-tile {
 		left: 35% !important;
 	}
+	
+	#change-userpic-modal .modal-header h3 {
+		padding-top: 15px !important;
+	}
+	
 }
 
 
