--- a/html_build/packages/game-schedules/templates/schedule-list.html
+++ b/html_build/packages/game-schedules/templates/schedule-list.html
@@ -35,6 +35,7 @@
 	{{#eventPage}}
 	<div>
 		<a href="javascript: void(0);" title="Add an Event" class="add-event-h desktop-link right-with-icon">Add Event / Meet</a>
+		<a href="javascript: void(0);" title="Add an Event" class="add-event-h common-btn common-default-game-orange add-event-link mobile-link right-with-icon">Add Event / Meet</a>
 	</div>
 	{{/eventPage}}
 	{{^eventPage}}
