--- a/html_build/css/app.css
+++ b/html_build/css/app.css
@@ -1932,6 +1932,12 @@ li.sport .teamlist-header, .stat-val-outer {
 	margin-left: 50px;
 }
 @media only screen and (min-width: 320px) and (max-width: 767px) {
+#menu-frame .display-main, #menu-frame .sub {
+		position: static !important;
+		height: auto !important;
+		width: 100% !important;
+		float: left !important;
+	}
 	body {
 		margin: 0 !important;
 		padding: 0 !important;
@@ -2671,6 +2677,8 @@ li.sport .teamlist-header, .stat-val-outer {
 		height: auto !important;
 		min-height: 20px !important;
 	}
+	
+	
     .add-participants {
         background: url(images/icons/sprite_icons_only_color_64px.png) no-repeat;
         display: inline-block;
@@ -2684,6 +2692,7 @@ li.sport .teamlist-header, .stat-val-outer {
 		width: 86% !important;
 		margin: 10px 2% !important;
 	}
+	
 	
 	.show-older-h {
 		width: 38% !important;
@@ -3043,5 +3052,35 @@ li.sport .teamlist-header, .stat-val-outer {
 		padding: 5px 3px;
 	}
 	
-	 
+	#main-header .image-outer-h {
+		width: 100% !important;
+	}
+	
+	#main-header .image-outer-h li.image {
+		width: 100% !important;
+		margin: 0 !important;
+		padding: 0 !important;
+	}
+	
+	#main-header .image-outer-h li.image div.image-item-container, #main-header .image-outer-h li.image div.image-item-container img {
+		width: 100%;
+	}
+	
+	#main-header .image-outer-h li.image div.game-tile {
+		left: 35% !important;
+	}
+	
+	#change-userpic-modal .modal-header h3 {
+		padding-top: 15px !important;
+	}
+	
+}
+@media only screen and (min-width: 480px) and (max-width: 767px) {
+	.closer {
+		margin-top: 5px !important;
+	}
+	
+	.loading_image {
+		top: 35px !important;
+	}
 }
