--- a/html/css/components/photoPlayer.css
+++ b/html/css/components/photoPlayer.css
@@ -594,11 +594,11 @@ ul#tags-list .tags-number {
 }
 
 .photo-player-icons {
-	background: url(/css/images/icons/photoplayer-sprite.png) no-repeat;
+	background: url(../images/icons/photoplayer-sprite.png) no-repeat;
 }
 
 .photo-player-detail-icons {
-	background: url(/css/images/icons/photoplayer-detail-sprite.png) no-repeat;
+	background: url(../images/icons/photoplayer-detail-sprite.png) no-repeat;
 }
 
 .photo-player-detail-arrow {
