--- a/application/templates/index.mustache
+++ b/application/templates/index.mustache
@@ -49,7 +49,7 @@
 </script></head><body><script>if (!window.jQuery) {
 	var fileref = document.createElement('script');
 	fileref.setAttribute("type", "text/javascript");
-	fileref.setAttribute("src", '/vendor/jquery.1.10.2.min.js');
+	fileref.setAttribute("src", '//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js');
 	fileref.async = false;
 	fileref.onload = function() {
 		var reqjs = document.createElement('script');
