--- a/html/css/app.css
+++ b/html/css/app.css
@@ -1,3 +1,11 @@
+
+.mobile-hide{
+    display:block !important;
+}
+.mobile-show{
+    display:none !important;
+}
+
 .left {
 	float: left;
 }
@@ -2355,6 +2363,12 @@ li.sport .teamlist-header, .stat-val-outer {
 
 @media only screen and (min-width: 320px) and (max-width: 767px) {
 
+    .mobile-hide{
+        display:none !important;
+    }
+    .mobile-show{
+        display:block !important;
+    }
 
 #menu-frame .display-main, #menu-frame .sub {
 		position: static !important;
@@ -3035,7 +3049,11 @@ li.sport .teamlist-header, .stat-val-outer {
 	#top-rated {
 		display: none;
 	}
-	
+
+    .header-nav{
+        background-color: #313131 !important;
+    }
+
 	.home-template .fixed-icons {
 		position: static !important;
 		width: 100% !important;
@@ -3048,10 +3066,10 @@ li.sport .teamlist-header, .stat-val-outer {
 	}
 	
 	.home-template #menu {
-		border: 1px solid #000;
-		padding: 2%;
-		margin: 2%;
-		width: 92%;
+		padding: 1% 0;
+        margin: 0 0 1% -1%;
+        width: 102%;
+		width: 102%;
 	}
 	
 	.fixed-icons ul {
@@ -3060,7 +3078,7 @@ li.sport .teamlist-header, .stat-val-outer {
 	
 	.fixed-icons li {
 		float: left;
-		width: 55px;
+		width: 20%;
 	}
 	
 	.home-template .fixed-icons a {
