working on mobile detail view for image lists.

--- a/html/css/app.css
+++ b/html/css/app.css
@@ -2373,6 +2373,12 @@ li.sport .teamlist-header, .stat-val-outer {
     header .photo{
         margin: 5px 10px 5px 5px;
     }
+
+    .expander{
+        display: none;
+
+    }
+
 #menu-frame .display-main, #menu-frame .sub {
 		position: static !important;
 		height: auto !important;
@@ -2386,6 +2392,8 @@ li.sport .teamlist-header, .stat-val-outer {
 		overflow-y: auto;
 		overflow-x: hidden;
 	}
+    
+    
 
 	.account a[href^='/#!home'], .account .photo {
 		display: none !important;
@@ -3125,8 +3133,11 @@ li.sport .teamlist-header, .stat-val-outer {
 		min-width: 157px;
 		min-height: 181px;
 	}
-	
-	ul li.image {
+    #search-result {
+        width:100%;
+    }
+
+    ul li.image {
 		padding: 0;
 	/*	min-height: 184px;*/
 		width: 33%;
@@ -3134,17 +3145,30 @@ li.sport .teamlist-header, .stat-val-outer {
 	
 	ul#image-list {
 		padding-left: 0px !important;
+        width: 100%;
 	}
 
     ul li.image{
         margin-right: .5%;
         margin-bottom: 2px;
         min-height:0;
+  /*      position: absolute;
+        top: 0px;
+        left:0px;
+        height:100px;*/
+        width:32%;
+        box-sizing: border-box; -moz-box-sizing: border-box;
+        -webkit-transition: all 0.2s ease-out; transition: all 0.2s ease-out;
     }
-
-    ul li.image:nth-child(3n+3) {
-		margin-right: 0px;
-	}
+    .detail_row_mobile{
+        float: left;
+        width:100%;
+        margin-bottom: 2px;
+        margin-right: .5%;
+        min-height:0;
+        box-sizing: border-box; -moz-box-sizing: border-box;
+        -webkit-transition: all 0.2s ease-out; transition: all 0.2s ease-out;
+    }
 	
 	.search-result-outer .left-arrow-page, .search-result-outer .right-arrow-page {
 		display: none;
